invitation du groupe & migration de *ngIf / *ngFor vers @if / @for
